# iz

./: .gitignore  Cargo.toml  README.md  izconfig.json  test.txt
.cursor/rules/: iz.mdc
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
