[package]
name = "iz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iz"
path = "src/main.rs"

[lib]
name = "iz"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
rand = "0.8"
once_cell = "1.19"
